# warden

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.example.json
.claude/skills/warden-rule-author/: SKILL.md
.claude/skills/warden-rule-discovery/: SKILL.md
.github/workflows/: ci.yml
demo/: README.md  run_demo.sh  try_with_claude.sh
demo/.claude/: settings.json
demo/after/api/: checkout.py
demo/after/billing/: charge.py  receipts.py
demo/after/config/: flags.py
demo/after/notifications/: email.py
demo/before/api/: checkout.py
demo/before/billing/: charge.py  receipts.py
demo/before/config/: flags.py
demo/before/notifications/: email.py
demo/rules/: no-cross-module-coupling.yaml  no-env-vars.yaml  no-pii-in-logs.yaml  prefer-flag-helper.yaml
docs/: conclusion.md  decisions.md  design.md  roadmap.md  tree-sitter.md
examples/api/: handler.py
examples/billing/: charge.py
examples/config/: flags.py
rules/: core-stays-agent-agnostic.yaml  no-dbg-in-src.yaml  no-direct-anthropic-api.yaml  no-expect-in-src.yaml  no-unsafe-in-src.yaml  no-unwrap-in-src.yaml
skills/warden-rule-author/: SKILL.md
skills/warden-rule-discovery/: SKILL.md
src/: ci_gate.rs  glob.rs  lang.rs  lib.rs  load.rs  main.rs  results.rs  runtime_gate.rs  schema.rs  score.rs
src/adapters/: claude_code.rs  mod.rs
src/matchers/: base.rs  llm.rs  mod.rs  pattern.rs  query.rs  structural.rs
src/report/: human.rs  json_out.rs  mod.rs
tests/: cli.rs  gates.rs  matchers.rs  schema.rs  score.rs
