[package]
name = "warden"
version = "0.1.0"
edition = "2024"
description = "A deterministic, agent-agnostic policy engine for AI-agent-generated code"
repository = "https://github.com/nicolastakashi/warden"
license = "Apache-2.0"
readme = "README.md"
keywords = ["policy", "linter", "ai-agents", "tree-sitter", "claude"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "warden"
path = "src/lib.rs"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
